objects/Trip_Report_Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>IF( TEXT(Contact_Selection__c) == &apos;User&apos;,  User__r.FirstName +&apos; &apos;+ User__r.LastName +&apos;, &apos; + $Organization.Name , IF(TEXT(Contact_Selection__c) == &apos;Lead&apos;, Lead__r.FirstName + &apos; &apos; + Lead__r.LastName + &apos;, &apos; + Lead__r.Company,  Contact__r.FirstName + &apos; &apos; + Contact__r.LastName + &apos;, &apos; +Contact__r.Account.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Selection__c</fullName>
        <label>Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Trip_Report_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Trip_Report_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <label>No</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>CASE( Contact_Selection__c , &apos;Contact&apos;,  Contact__r.Title , &apos;User&apos;,  User__r.Title, &apos;Lead&apos;,  Lead__r.Title, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_Report__c</fullName>
        <label>Call Report</label>
        <referenceTo>Trip_Report__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Trip_Report_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trip_Report_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Participant</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Trip Report Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>